--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "react": "^16.3.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.3.1",
+    "react-google-maps": "^9.4.5",
     "react-materialize": "^2.1.2",
     "react-particles-js": "^2.1.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "react-scroll": "^1.7.8",
+    "recompose": "^0.26.0",
     "redux": "^3.7.2"
   },
   "scripts": {
